fixed login screen, fixed overflow bug in ff3.6, added warning when disabling a recently used table

--- a/blur-admin/app/assets/stylesheets/navigation.scss
+++ b/blur-admin/app/assets/stylesheets/navigation.scss
@@ -1,6 +1,12 @@
 $nav-height: 40px;
 
 #root{
+  .navbar{
+    .brand{
+      padding-bottom: 0px;
+    }
+    overflow: hidden;
+  }
 	.navbar-inner {
 		background: transparent url('gradient.png') repeat-x 0 -58px;
 		@include border-radius(0);
