--- a/blur-admin/app/assets/stylesheets/user_session.scss
+++ b/blur-admin/app/assets/stylesheets/user_session.scss
@@ -6,3 +6,6 @@
 	margin-right: auto;
 	text-align: center;
 }
+.help-inline{
+  display: none;
+}
